[gd_scene load_steps=19 format=3 uid="uid://brbsj00fs0ip5"]

[ext_resource type="Script" path="res://Scripts/Party/player_group.gd" id="1_2rkpk"]
[ext_resource type="Texture2D" uid="uid://lv7yukl3f0de" path="res://Assets/Sprites/BattleSprites/CombatEffects/CleaveSheet.png" id="5_hx4rx"]
[ext_resource type="Script" path="res://Scripts/Party/great_cleaveplayer.gd" id="6_2rd3t"]
[ext_resource type="PackedScene" uid="uid://ba8epkhv3sjk4" path="res://Scenes/Party/mp.tscn" id="6_t1v4n"]
[ext_resource type="PackedScene" uid="uid://bwco2ng2sbm35" path="res://Scenes/Party/healing_waveplayer.tscn" id="6_uud3q"]
[ext_resource type="FontFile" uid="uid://bu64if06n8ogu" path="res://Assets/MainFont.ttf" id="7_k8jfx"]
[ext_resource type="PackedScene" uid="uid://dbwanukqarbm4" path="res://Scenes/Party/mana_surge.tscn" id="8_71s6k"]
[ext_resource type="VideoStream" path="res://Assets/Meta/GlitchEffect.ogv" id="9_2akv7"]
[ext_resource type="AudioStream" uid="uid://dpyvttinkgb24" path="res://Assets/Audio/GlitchSFX.mp3" id="10_sy8sh"]
[ext_resource type="PackedScene" uid="uid://c3edfhpbyn66r" path="res://Scenes/Party/Characters/player.tscn" id="10_ul4ul"]
[ext_resource type="AudioStream" uid="uid://b28petxxs3sph" path="res://Assets/Audio/Music/LoopedBattle.mp3" id="11_1541j"]
[ext_resource type="AudioStream" uid="uid://jcl6koem571h" path="res://Assets/Audio/Level Up.wav" id="12_8ksjx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cftgs"]
atlas = ExtResource("5_hx4rx")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2u37"]
atlas = ExtResource("5_hx4rx")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s5s8"]
atlas = ExtResource("5_hx4rx")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmdd7"]
atlas = ExtResource("5_hx4rx")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y60pj"]
atlas = ExtResource("5_hx4rx")
region = Rect2(600, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_blwcx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cftgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2u37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s5s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmdd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y60pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cftgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2u37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s5s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmdd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y60pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cftgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2u37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s5s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmdd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y60pj")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="PlayerGroup" type="Node2D" groups=["Player"]]
script = ExtResource("1_2rkpk")

[node name="Player" parent="." instance=ExtResource("10_ul4ul")]
position = Vector2(165, 313)

[node name="MP" parent="." instance=ExtResource("6_t1v4n")]

[node name="YOUWIN" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -6.0
offset_top = -4.0
offset_right = 1159.0
offset_bottom = 654.0
color = Color(0.140447, 0.140447, 0.140447, 0.654)

[node name="Label" type="Label" parent="YOUWIN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -11.5
offset_right = 38.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_k8jfx")
theme_override_font_sizes/font_size = 125
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinTimer" type="Timer" parent="YOUWIN"]
wait_time = 2.0
one_shot = true

[node name="YOULOSE" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -6.0
offset_top = -4.0
offset_right = 1159.0
offset_bottom = 654.0
color = Color(0.140447, 0.140447, 0.140447, 0.654)

[node name="Label" type="Label" parent="YOULOSE"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -11.5
offset_right = 38.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_k8jfx")
theme_override_font_sizes/font_size = 100
text = "The party has fallen..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseTimer" type="Timer" parent="YOULOSE"]
wait_time = 3.0
one_shot = true

[node name="LoseGlitchTimer" type="Timer" parent="YOULOSE"]
wait_time = 1.5
one_shot = true

[node name="ManaSurgeSprite" parent="." instance=ExtResource("8_71s6k")]

[node name="GreatCleaveSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(826, 342)
scale = Vector2(4.88935, 4.88935)
sprite_frames = SubResource("SpriteFrames_blwcx")
frame = 4
frame_progress = 1.0
script = ExtResource("6_2rd3t")

[node name="HealingWaveSprite" parent="." instance=ExtResource("6_uud3q")]

[node name="Glitch" type="VideoStreamPlayer" parent="."]
z_index = 4096
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
stream = ExtResource("9_2akv7")

[node name="GlitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_sy8sh")

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_1541j")
autoplay = true

[node name="WinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_8ksjx")
volume_db = -5.0

[connection signal="timeout" from="YOUWIN/WinTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="YOULOSE/LoseTimer" to="." method="_on_lose_timer_timeout"]
[connection signal="timeout" from="YOULOSE/LoseGlitchTimer" to="." method="_on_lose_glitch_timer_timeout"]
[connection signal="animation_finished" from="GreatCleaveSprite" to="GreatCleaveSprite" method="_on_animation_finished"]
[connection signal="finished" from="Glitch" to="." method="_on_glitch_finished"]
